RESOLVED FIXED292897
Attempting to modify selection while zoomed in results in fast, unexpected scrolling.
https://bugs.webkit.org/show_bug.cgi?id=292897
Summary Attempting to modify selection while zoomed in results in fast, unexpected sc...
Megan Gardner
Reported 2025-05-12 18:40:50 PDT
Attempting to modify selection while zoomed in results in fast, unexpected scrolling.
Attachments
Megan Gardner
Comment 1 2025-05-12 18:40:52 PDT
Megan Gardner
Comment 2 2025-05-12 18:46:07 PDT
EWS
Comment 3 2025-05-13 16:55:12 PDT
Committed 294874@main (c09c7ad05317): <https://commits.webkit.org/294874@main> Reviewed commits have been landed. Closing PR #45281 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.